--- a/main.bib
+++ b/main.bib
@@ -62,3 +62,11 @@
     year         = {1964},
     doi          = {10.1139/v64-276}
 }
+
+@online{bib:LineOfCenters,
+    title        = {Collision Theory: Derivation for Model 2},
+    author       = {H. Scott Fogler and M. Nihat G\"{u}rmen},
+    year         = {2008},
+    url          = {http://websites.umich.edu/~elements/03chap/html/collision/CSDErive2.htm},
+    urldate      = {2022-05-18}
+}
